--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,7 @@
 }
 
 .page__main-block {
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
   overflow: hidden;
 }
@@ -74,14 +74,6 @@
   color: #000;
 }
 
-.main-block {
-  background-image: url("../img/main-block/background.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
-
 .main-block__container {
   margin: 0 auto;
   max-width: 600px;
@@ -90,6 +82,8 @@
 
 .main-block__text {
   padding-top: 50vh;
+  position: relative;
+  z-index: 5;
 }
 
 .main-block__tittle {
@@ -139,6 +133,7 @@
   position: relative;
   bottom: 0;
   right: 0;
+  z-index: 5;
 }
 
 .photo-data__icon {
@@ -154,6 +149,16 @@
   color: #FFFFFF;
 }
 
+.main-lock__background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 @media (max-width: 992px) {
   .main-block__text {
     padding-top: 40vh;
@@ -166,6 +171,9 @@
   }
   .main-block__company-info {
     font-size: 0.75rem;
+  }
+  .photo-data {
+    margin-top: 20%;
   }
   .photo-data__text {
     font-size: 10px;
