--- a/style/style.scss
+++ b/style/style.scss
@@ -25,7 +25,7 @@
 }
 
 .page__main-block {
-    height: 100vh;
+    min-height: 100vh;
     position: relative;
     overflow: hidden;
 }
@@ -88,13 +88,7 @@
 
 // ---------- MAIN BLOCK -------------------------------------------------------------------------------------------
 
-.main-block {
-    background-image: url('../img/main-block/background.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-}
+//.main-block {}
 
 .main-block__container {
     margin: 0 auto;
@@ -104,6 +98,8 @@
 
 .main-block__text {
     padding-top: 50vh;
+    position: relative;
+    z-index: 5;
 }
 
 .main-block__tittle {
@@ -153,6 +149,7 @@
     position: relative;
     bottom: 0;
     right: 0;
+    z-index: 5;
 }
 
 .photo-data__icon {
@@ -168,6 +165,15 @@
     color: #FFFFFF;
 }
 
+.main-lock__background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
+
 @media (max-width: 992px) {
     .main-block__text {
         padding-top: 40vh;
@@ -180,6 +186,9 @@
     }
     .main-block__company-info {
         font-size: 0.75rem;
+    }
+    .photo-data {
+        margin-top: 20%;
     }
     .photo-data__text {
         font-size: 10px;
