--- a/style/style.scss
+++ b/style/style.scss
@@ -32,6 +32,8 @@
 
 //.page__whatwedo {}
 
+//.page__sunset {}
+
 // --------- HEADER --------------------------------------------------------------------------------------------
 
 .header {
@@ -88,6 +90,12 @@
     color: #000;
 }
 
+@media (max-width: 992px) {  // !!!
+    .menu {
+        display: none;
+    }
+}
+
 // ---------- MAIN BLOCK -------------------------------------------------------------------------------------------
 
 //.main-block {}
@@ -139,7 +147,7 @@
 }
 
 .main-block__photo-data {
-    margin-top: 5%;
+    padding-top: 7%;
     margin-right: 2.77%;
 }
 
@@ -319,5 +327,101 @@
         height: 24px;
         display: inline-block;
         margin-right: 7px;
+    }
+}
+
+@media (max-width: 470px) {
+    .content-item__text {
+        font-size: 12px;
+    }
+
+    .content-item__link {
+        font-size: 12px;
+    }
+}
+
+// ---------- SUNSET (BLOCK 3) ----------------------------------------------------------------------------
+
+.sunset {
+    position: relative;
+}
+
+.sunset__text {
+    width: 20%;
+    height: 100%;
+    position: absolute;
+    margin: 0 3% 0 77%;
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.sunset__tittle {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.sunset__subtittle {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    color: #C0C0C0;
+}
+
+.sunset__photo-data {
+    position: absolute;
+    margin-right: 2.77%;
+    margin-bottom: 2%;
+}
+
+.sunset__background {
+    position: relative;
+    width: 100%;
+    height: 75vh;
+}
+
+.sunset__background img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@media (max-width: 992px) {
+    .sunset__text {
+        width: 35vw;
+        margin: 0 5vw 0 60vw;
+    }
+}
+
+@media (max-width: 565px) {
+    .sunset__text {
+        width: 45vw;
+        margin: 0 5vw 0 50vw;
+    }
+}
+
+@media (max-width:436px) {
+    .sunset__text {
+        width: 60vw;
+        margin: 0 5vw 0 35vw;
+    }
+}
+
+@media (max-width:330px) {
+    .sunset__text {
+        width: 70vw;
+        margin: 0 5vw 0 25vw;
     }
 }
