--- a/style/style.scss
+++ b/style/style.scss
@@ -25,14 +25,23 @@
 }
 
 .page__main-block {
-    min-height: 100vh;
+    min-height: 90vh;
     position: relative;
     overflow: hidden;
 }
 
-//.page__whatwedo {}
+.page__whatwedo {
+    overflow: hidden;
+}
 
-//.page__sunset {}
+.page__sunset {
+    overflow: hidden;
+    min-height: 80vh;
+}
+
+.page__tools {
+    overflow: hidden;
+}
 
 // --------- HEADER --------------------------------------------------------------------------------------------
 
@@ -90,7 +99,9 @@
     color: #000;
 }
 
-@media (max-width: 992px) {  // !!!
+@media (max-width: 992px) {
+
+    // !!!
     .menu {
         display: none;
     }
@@ -147,8 +158,9 @@
 }
 
 .main-block__photo-data {
-    padding-top: 7%;
-    margin-right: 2.77%;
+    padding: 9vmin 0 0;
+    margin: 0 2.77% 2.77% 0;
+    position: absolute;
 }
 
 .photo-data {
@@ -174,12 +186,13 @@
     line-height: 100%;
     color: #FFFFFF;
 }
+
 .main-lock__background {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -187,20 +200,21 @@
     .main-block__text {
         padding-top: 40vh;
     }
+
     .main-block__tittle {
         font-size: 0.75rem;
     }
+
     .main-block__company-name {
         font-size: 2.5rem;
     }
+
     .main-block__company-info {
         font-size: 0.75rem;
     }
-    .photo-data {
-        margin-top: 20%;
-    }
-    .photo-data__text {
-        font-size: 10px;
+
+    .main-block__photo-data {
+        padding: 15vmax 0 0;
     }
 }
 
@@ -208,6 +222,7 @@
     .main-block__text {
         padding-top: 30vh;
     }
+
     .main-block__company-name {
         font-size: 2rem;
     }
@@ -218,6 +233,7 @@
 .whatwedo {
     background-color: #000;
 }
+
 //.whatwedo__body {}
 
 .whatwedo__text {
@@ -319,6 +335,7 @@
     letter-spacing: 0.4px;
     color: #000000;
     margin: 8px;
+
     &::before {
         content: "";
         background-color: #000;
@@ -386,7 +403,7 @@
 .sunset__background {
     position: relative;
     width: 100%;
-    height: 75vh;
+    height: 80vh;
 }
 
 .sunset__background img {
@@ -423,5 +440,160 @@
     .sunset__text {
         width: 70vw;
         margin: 0 5vw 0 25vw;
+    }
+}
+
+// ---------- TOOLS (BLOCK 4) ----------------------------------------------------------------------------
+
+//.tools {}
+
+.tools__body {
+    display: grid;
+    grid-template: 1fr / repeat(2, 1fr);
+    background-color: #000;
+    position: relative;
+}
+
+.tools__body-text {
+    margin: 12.2% 10%;
+    padding: 10% 6% 6% 6%;
+
+}
+
+.tools__tittle {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #C0C0C0;
+    margin-bottom: 2%;
+}
+
+.tools__headline {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 114%;
+    color: #FFFFFF;
+    margin-bottom: 1.5vmin;
+}
+
+.tools__text {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    color: #FFFFFF;
+    margin-bottom: calc(20 / 600) * 100%;
+}
+
+@media (max-width: 740px) {
+    .tools__headline {
+        margin-bottom: 3vw;
+    }
+
+    .tools__tittle {
+        margin-bottom: 4%;
+        font-size: 12px;
+    }
+}
+
+.tools__button {
+    background: #FFFFFF;
+    border-radius: 14px;
+    display: inline-block;
+    align-self: flex-start;
+    position: relative;
+    margin: 8px 0 8px 0;
+}
+
+.tools__button-link {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 133%;
+    letter-spacing: 0.4px;
+    color: #000000;
+    margin: 9px;
+
+    &::before {
+        content: "";
+        background-color: #000;
+        border-radius: 50%;
+        width: 24px;
+        height: 24px;
+        display: inline-block;
+        margin-right: 7px;
+    }
+}
+
+@media (max-width: 470px) {
+    .tools__button-link {
+        font-size: 12px;
+    }
+
+    .tools__text {
+        font-size: 12px;
+    }
+
+    .tools__headline {
+        font-size: 24px;
+    }
+}
+
+@media (max-width: 370px) {
+    .tools__button-link {
+        margin: 3px;
+        font-size: 10px;
+        padding-right: 3px;
+    }
+}
+
+.tools__body-image {
+    position: relative;
+}
+
+.tools__body-image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.tools__photo-data {
+    position: absolute;
+    margin-right: 2.77%;
+    margin-bottom: 2%;
+}
+
+@media (max-width: 570px) {
+    .tools__photo-data {
+        display: grid;
+        grid-template: 1fr 1fr / 2fr 2fr;
+        column-gap: 5px;
+        row-gap: 7px;
+    }
+}
+
+
+
+
+
+
+
+@media (max-width: 570px) {
+    .photo-data {
+        margin: 0 4% 4% 0;
     }
 }
