--- a/style/style.scss
+++ b/style/style.scss
@@ -43,6 +43,11 @@
     overflow: hidden;
 }
 
+.page__leafs {
+    overflow: hidden;
+    min-height: 80vh;
+}
+
 // --------- HEADER --------------------------------------------------------------------------------------------
 
 .header {
@@ -586,7 +591,91 @@
     }
 }
 
+// ---------- LEAFS (BLOCK 5) ----------------------------------------------------------------------------
 
+.leafs {
+    position: relative;
+}
+
+.leafs__text {
+    width: 20%;
+    height: 100%;
+    position: absolute;
+    margin: 0 3% 0 77%;
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.leafs__tittle {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.leafs__subtittle {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    color: #C0C0C0;
+}
+
+.leafs__photo-data {
+    position: absolute;
+    margin-right: 2.77%;
+    margin-bottom: 2%;
+}
+
+.leafs__background {
+    position: relative;
+    width: 100%;
+    height: 80vh;
+}
+
+.leafs__background img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@media (max-width: 992px) {
+    .leafs__text {
+        width: 35vw;
+        margin: 0 5vw 0 60vw;
+    }
+}
+
+@media (max-width: 565px) {
+    .leafs__text {
+        width: 45vw;
+        margin: 0 5vw 0 50vw;
+    }
+}
+
+@media (max-width:436px) {
+    .leafs__text {
+        width: 60vw;
+        margin: 0 5vw 0 35vw;
+    }
+}
+
+@media (max-width:330px) {
+    .leafs__text {
+        width: 70vw;
+        margin: 0 5vw 0 25vw;
+    }
+}
 
 
 
