--- a/style/style.css
+++ b/style/style.css
@@ -46,6 +46,11 @@
   min-height: 70vh;
 }
 
+.page__star-fall {
+  overflow: hidden;
+  min-height: 80vh;
+}
+
 .header {
   position: sticky;
   z-index: 999;
@@ -687,6 +692,87 @@
 @media (max-width: 360px) {
   .clients__logos img {
     margin-bottom: 20px;
+  }
+}
+.star-fall {
+  position: relative;
+}
+
+.star-fall__text {
+  width: 20%;
+  height: 100%;
+  position: absolute;
+  margin: 0 3% 0 77%;
+  z-index: 5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.star-fall__tittle {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+.star-fall__subtittle {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  color: #C0C0C0;
+}
+
+.star-fall__photo-data {
+  position: absolute;
+  margin-right: 2.77%;
+  margin-bottom: 2%;
+}
+
+.star-fall__background {
+  position: relative;
+  width: 100%;
+  height: 80vh;
+}
+
+.star-fall__background img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media (max-width: 992px) {
+  .star-fall__text {
+    width: 35vw;
+    margin: 0 5vw 0 60vw;
+  }
+}
+@media (max-width: 565px) {
+  .star-fall__text {
+    width: 45vw;
+    margin: 0 5vw 0 50vw;
+  }
+}
+@media (max-width: 436px) {
+  .star-fall__text {
+    width: 60vw;
+    margin: 0 5vw 0 35vw;
+  }
+}
+@media (max-width: 330px) {
+  .star-fall__text {
+    width: 70vw;
+    margin: 0 5vw 0 25vw;
   }
 }
 @media (max-width: 570px) {
