added footer, only html

--- a/style/style.scss
+++ b/style/style.scss
@@ -920,12 +920,97 @@
     }
 }
 
-
-
-
-
 @media (max-width: 570px) {
     .photo-data {
         margin: 0 4% 4% 0;
     }
+}
+
+// ---------- FOOTER ----------------------------------------------------------------------------
+
+.footer {
+}
+
+.footer__body {
+}
+
+.footer__top {
+}
+
+.footer__top-item {
+}
+
+.footer__top-logo {
+}
+
+.footer__top-info {
+}
+
+.footer__top-areas {
+}
+
+.top-areas {
+}
+
+.top-areas__tittle {
+}
+
+.top-areas__list {
+}
+
+.footer__top-pages {
+}
+
+.top-pages {
+}
+
+.top-pages__tittle {
+}
+
+.top-pages__list {
+}
+
+.footer__subscribe {
+}
+
+.subscribe {
+}
+
+.subscribe__text {
+}
+
+.subscribe__tittle {
+}
+
+.subscribe__subtittle {
+}
+
+.subscribe__button {
+}
+
+.subscribe__form {
+}
+
+.footer__copyright {
+}
+
+.copyright {
+}
+
+.copyright__text {
+}
+
+.copyright__social {
+}
+
+.social {
+}
+
+.social__twitter {
+}
+
+.social__instagram {
+}
+
+.social__facebook {
 }
