check out mistakes

--- a/style/style.scss
+++ b/style/style.scss
@@ -927,7 +927,7 @@
 }
 
 // ---------- FOOTER ----------------------------------------------------------------------------
-
+/*
 .footer {
 }
 
@@ -1014,3 +1014,5 @@
 
 .social__facebook {
 }
+
+*/
